--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,81 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <a class="navbar-brand 
+            mr-auto
+            order-lg-1"
+     routerLink="" 
+  >
+    Cinema +
+  </a>
+  <div class="btngroup 
+              row 
+              d-flex 
+              align-items-center
+              order-lg-3">
+    <div class="dropdown ">
+      <a
+        href="#"
+        id="navbarDropdown"
+        role="button"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        <svg
+          width="1.5em"
+          height="1.5em"
+          viewBox="0 0 16 16"
+          class="bi bi-person-fill"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+          />
+        </svg>
+      </a>
+      <div
+        class="dropdown-menu 
+               dropdown-menu-right 
+               bg-dark"
+        aria-labelledby="navbarDropdown"
+      >
+        <a class="dropdown-item hover-anim" href="#">Login</a>
+      </div>
+    </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+  <ul
+    class="navbar-nav 
+           collapse 
+           navbar-collapse 
+           justify-content-center
+           mr-auto
+           order-lg-2"
+    id="navbarNav"
+  >
+    <li class="nav-item col-2 hover-anim">
+      <a class="nav-link" routerLink="">Home</a>
+    </li>
+    <li class="nav-item col-2 hover-anim">
+      <a class="nav-link" routerLink="category/now-showing">Now Showing</a>
+    </li>
+    <li class="nav-item col-2 hover-anim">
+      <a class="nav-link" routerLink="category/comming-soon">Coming Soon</a>
+    </li>
+    <li class="nav-item col-2 hover-anim">
+      <a class="nav-link" routerLink="cinemas">Cinemas</a>
+    </li>
+  </ul>
+  
+</nav>
