--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -64,16 +64,16 @@
            order-lg-2"
     id="navbarNav"
   >
-    <li class="nav-item col-2 hover-anim">
+    <li class="nav-item col-3 col-md-2 hover-anim">
       <a class="nav-link" routerLink="">Home</a>
     </li>
-    <li class="nav-item col-2 hover-anim">
+    <li class="nav-item col-3 col-md-2 hover-anim">
       <a class="nav-link" routerLink="category/now-showing">Now Showing</a>
     </li>
-    <li class="nav-item col-2 hover-anim">
+    <li class="nav-item col-3 col-md-2 hover-anim">
       <a class="nav-link" routerLink="category/comming-soon">Coming Soon</a>
     </li>
-    <li class="nav-item col-2 hover-anim">
+    <li class="nav-item col-3 col-md-2 hover-anim">
       <a class="nav-link" routerLink="cinemas">Cinemas</a>
     </li>
   </ul>
