updated movie-show component
fixed responsiveness

--- a/src/app/movie-show/movie-show.component.html
+++ b/src/app/movie-show/movie-show.component.html
@@ -16,7 +16,7 @@
         {{ randomMovie.genre }}
       </p>
     </div>
-    <div class="row align-content-end font-weight-bold">
+    <div class="d-inline-flex align-items-end font-weight-bold">
       <a routerLink="/movie/{{this.randomMovie._id}}" class="text-decoration-none text-uppercase">read more -></a>
     </div>
   </div>
