updated home component
added logic for communication with movie service and linked with movie-show and slick-carousel components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<app-movie-show></app-movie-show>
+<app-slick-carousel *ngFor="let category of categories" [movieCategory]="category"></app-slick-carousel>
