height of movie-show in home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<app-movie-show></app-movie-show>
+<div>
+    <app-movie-show></app-movie-show>
+</div>
 <app-slick-carousel *ngFor="let category of categories" [movieCategory]="category"></app-slick-carousel>
