added footer component into home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,4 @@
     <app-movie-show></app-movie-show>
 </div>
 <app-slick-carousel *ngFor="let category of categories" [movieCategory]="category"></app-slick-carousel>
+<app-footer></app-footer>
